# target-msvc-from-docker

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  clang_windows_cross.cmake
Step1/: CMakeLists.txt  tutorial.cxx
